# C-New

./: .gitignore  CMakeLists.txt
Client/: myHeader.h
Client/Headers/: Cash.h
Server/: myHeader.h
Server/Headers/: Cash.h  Employee.cpp  Person.cpp  Server.cpp  Server.h  Thread.cpp  Thread.h
test/: CMakeLists.txt  README.md
test/scripts/: report_coverage.ps1
test/support/: coverage_helpers.h  getch_stub.h  person_accessor.h  test_fixture.cpp  test_fixture.h  test_runtime.cpp
test/unit/: test_admin.cpp  test_admin_coverage.cpp  test_admin_home_cases.cpp  test_branch_coverage_boost.cpp  test_branch_targets.cpp  test_cash.cpp  test_client.cpp  test_complaint_base.cpp  test_complaint_coverage.cpp  test_complaint_customer.cpp  test_complaint_employee.cpp  test_customer.cpp  test_customer_coverage.cpp  test_employee.cpp  test_employee_coverage.cpp  test_integration_network.cpp  test_person.cpp  test_person_coverage.cpp  test_person_deep_branches.cpp  test_server.cpp  test_server_branch_boost.cpp  test_thread.cpp
